question content jumping fix
Former-commit-id: 75a4d49fda92c638cf9ebf16a110c0a23e9d3f81

--- a/sources/easygenerator.Web/Content/question.css
+++ b/sources/easygenerator.Web/Content/question.css
@@ -276,6 +276,10 @@
     border-bottom-color: #e6e6e6;
 }
 
+.question-content-item {
+    margin-top: 6px;
+}
+
     .question-learning-content-list-item:hover,
     .question-content-item:hover {
         border: 1px solid #e6e6e6;
@@ -373,7 +377,7 @@
     }
 
 .add-button-text-wrapper {
-    padding: 11px 10px;
+    padding: 9px 10px;
     text-align: center;
 }
 
